--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,10 @@ github_username:  charlietriplett
 theme: minima
 plugins:
   - jekyll-feed
+collections:
+  products:
+    output: true
+    permalink: /:collection/:name/
 
 # Exclude from processing.
 # The following items will not be processed, by default.
